examples/test/testpolicy14542.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14542
  namespace: namespace395
spec:
  podSelector:
    matchLabels:
      key2: value12
      key42: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value45
          key33: value40
      podSelector:
        matchLabels:
          key12: value3
          key22: value46
          key44: value27
